<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_title">IMDB Movies</string>
    <string name="details">IMDB Movie Details</string>
    <string name="app_name">Feed</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="actors">Actors</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="awards">Awards</string>
    <string name="metascore">Metascore</string>
    <string name="type">Type</string>
    <string name="plot">Plot</string>
    <string name="imdb_rating">Imdb rating</string>
    <string name="imdb_votes">Imdb votes</string>
    <string name="rated">Rated</string>
    <string name="runtime">Runtime</string>
    <string name="writer">Writer</string>
    
    <string name="description_image">Description image</string>

</resources>