<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingTop="@dimen/movie_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/description_image"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <com.feed.views.CustomTextViewTitlesApp
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iw_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_image"
                android:paddingBottom="@dimen/movie_margin"
                android:paddingTop="@dimen/movie_margin" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb_rating" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_imdb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awards" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_awards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metascore" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_metascore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rated" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runtime" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actors" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb_votes" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_imdb_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.feed.views.CustomTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <com.feed.views.CustomTextViewDetail
                android:id="@+id/txt_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>